// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatPromptSubmit > renders with class correctly 1`] = `
"<button type="submit" aria-label="Send prompt" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`ChatPromptSubmit > renders with icon correctly 1`] = `
"<button type="submit" aria-label="Send prompt" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`ChatPromptSubmit > renders with status error correctly 1`] = `
"<button type="button" aria-label="Send prompt" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`ChatPromptSubmit > renders with status ready correctly 1`] = `
"<button type="submit" aria-label="Send prompt" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`ChatPromptSubmit > renders with status streaming correctly 1`] = `
"<button type="button" aria-label="Send prompt" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`ChatPromptSubmit > renders with status submitted correctly 1`] = `
"<button type="button" aria-label="Send prompt" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
  <!--v-if-->
  <!--v-if-->
</button>"
`;
